[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Gina James"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
diagrams = "^0.23.4"
pytest = "^8.2.2"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


